--- a/app/less/_popup.less
+++ b/app/less/_popup.less
@@ -144,7 +144,11 @@
 
 .vacancy-modal-popup {
     max-width: 364px;
-
+    input[type='text'] {
+        border-radius: 3px;
+        text-align: left;
+        padding: 3px 7px;
+    }
     .vacancy-modal__title {
         padding-left: 0;
         padding-right: 13px;
