--- a/app/less/main.less
+++ b/app/less/main.less
@@ -768,6 +768,21 @@ i.label {
 }
 
 
+.change-direction {
+  width: 22px;
+  height: 22px;
+  svg {
+    width: 16px;
+    height: 16px;
+  }
+  cursor: pointer;
+  transition: transform 0.25s linear;
+  &.rotate {
+    transform: rotate(180deg);
+  }
+}
+
+
 ////////Animations/////
 
 
