--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -209,7 +209,7 @@
 					input(type="radio" id='vacancies-rbtn' name="sorting-rbtn")
 					label(for="vacancies-rbtn")
 						|По вакансиям
-		#type-feedback-popup
+		#type-feedback-popup.work-modal-popup
 			form
 				p
 					|Тип отзыва
@@ -240,7 +240,7 @@
 					label(for="client-feedback-rbtn")
 						|Выберите клиента
 					input.find-client(type="text")
-					ul.autocomplete-result-list
+					//- ul.autocomplete-result-list
 				.input-group
 					input(type="radio" id='uamf-feedback-rbtn' name="client-feedback-rbtn")
 					label(for="uamf-feedback-rbtn")
