--- a/app/pug/layouts/vacancy/archive-row.pug
+++ b/app/pug/layouts/vacancy/archive-row.pug
@@ -14,7 +14,8 @@
 				|Архив - 28.10.2019
 		.row__name-2.row__cell.no-open
 			p.row__fullname.no-open
-				|Thompson Equestrian Partners / Junction Engineering
+				a.no-open(href="#")
+					|Thompson Equestrian Partners / Junction Engineering
 			i.tag.manager-tag.dark-blue-tag.no-open
 				|AK
 		.row__vacancies.row__cell
