--- a/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
@@ -17,9 +17,9 @@
 					.table-full__row
 						p.table-full__title
 							|Отобраны
-						.table-full__placeholder
-						.table-full__placeholder
-						.table-full__placeholder
+						.table-full__placeholder.first
+						.table-full__placeholder.second
+						.table-full__placeholder.third
 					.table-full__row.f-container
 							.table-full__cell.row__cell.cell-names
 								p
@@ -231,6 +231,9 @@
 					.table-full__row
 						p.table-full__title
 							|Готовятся к подаче
+						.table-full__placeholder.first
+						.table-full__placeholder.second
+						.table-full__placeholder.third
 					.table-full__row.f-container
 							.table-full__cell.row__cell.cell-names
 								p
@@ -312,6 +315,9 @@
 					.table-full__row
 						p.table-full__title
 							|Ждут разрешения
+						.table-full__placeholder.first
+						.table-full__placeholder.second
+						.table-full__placeholder.third
 					.table-full__row.f-container
 						.table-full__cell.row__cell.cell-names
 							p
@@ -421,6 +427,9 @@
 					.table-full__row
 						p.table-full__title
 							|Готовятся к отъезду
+						.table-full__placeholder.first
+						.table-full__placeholder.second
+						.table-full__placeholder.third
 					.table-full__row.f-container
 						.table-full__cell.row__cell.cell-names
 							p
@@ -460,6 +469,9 @@
 					.table-full__row
 						p.table-full__title
 							|Трудоустроены
+						.table-full__placeholder.first
+						.table-full__placeholder.second
+						.table-full__placeholder.third
 					.table-full__row.f-container
 						.table-full__cell.row__cell.cell-names
 							p
