--- a/app/pug/layouts/vacancy/vacancy-popup/_vacancy-popup.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_vacancy-popup.pug
@@ -39,7 +39,9 @@
 											span.delete-task-item
 							.sidebar__notes
 								.input-group
-									textarea(rows="4" class="sidebar__area-notes" data-elastic="true")
+									p
+										|Заметки
+									textarea(rows="5" class="sidebar__area-notes" data-elastic="true")
 							.sidebar__actions
 								ul.sidebar__action
 									li.sidebar__action-item
