--- a/app/pug/layouts/work-popup/_feedback.pug
+++ b/app/pug/layouts/work-popup/_feedback.pug
@@ -21,11 +21,11 @@
 		form.modal-row__feedback-row.add-feedback-form
 			.modal-row__feedback-speakers
 				i.modal-row__feedback-ico
-					+svg2('pos-feedback')
+					+svg2('pos-feedback-white')
 				a.modal-row__feedback-choise
 					|Выбрать
-				i.modal-row__feedback-direction
-					+svg2('arrow')
+				i.modal-row__feedback-direction.change-direction
+					+svg2('arrow-white')
 				p.modal-row__feedback-to
 					|Thompson Equestrian Partners
 			.modal-row__feedback-date
