--- a/app/less/vacancy/_clients.less
+++ b/app/less/vacancy/_clients.less
@@ -32,6 +32,29 @@
 		&:not(:first-child) {
 			border-bottom: 1px solid @white;
 		}
+
+		&:first-child {
+			padding-bottom: 0;
+			.table-full__title {
+				flex-basis: 211/989 * 100%;
+				border-right: 1px solid @white;
+			}
+
+			.table-full__placeholder.first {
+				flex-basis: 355/989 * 100%;
+				border-right: 1px solid @white;
+			}
+
+			.table-full__placeholder.second {
+				flex-basis: 177/989 * 100%;
+				border-right: 1px solid @white;
+			}
+
+			.table-full__placeholder.third {
+				flex-basis: 246/989 * 100%;
+				border-right: 1px solid @white;
+			}
+		}
 		
 	}
 
@@ -47,7 +70,7 @@
 	left: 0;
 	z-index: 10;
 	cursor: pointer;
-	top: 30px;
+	top: 35px;
 	width: 16px;
 	height: 16px;
 	border-radius: 50%;
@@ -83,5 +106,11 @@
     overflow: hidden;
     white-space: nowrap;
 
+	}
+}
+
+#choice-client-popup {
+	p {
+		padding: 0;
 	}
 }
