--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -228,4 +228,51 @@
 						|OK
 					button.cancel-bnt
 						|Отмена
+			#type-feedback-popup.vacancy-modal-popup
+				form
+					p
+						|Тип отзыва
+					.input-group
+						input(type="radio" id="inf-feedback-rbtn" name="type-feedback-rbtn")
+						label(for="inf-feedback-rbtn")
+							i.ico
+								+svg2('inf-feedback')
+							|Информационный
+					.input-group
+						input(type="radio" id='pos-feedback-rbtn' name="type-feedback-rbtn")
+						label(for="pos-feedback-rbtn")
+							i.ico
+								+svg2('pos-feedback')
+							|Хороший отзыв
+					.input-group
+						input(type="radio" id='neg-feedback-rbtn' name="type-feedback-rbtn")
+						label(for="neg-feedback-rbtn")
+							i.ico
+								+svg2('neg-feedback')
+							|Плохой отзыв
+					button.confirm-bnt
+						|OK
+		#choice-client-feedback-popup.vacancy-modal-popup
+			form
+				.input-group
+					input(type="radio" id="client-feedback-rbtn" name="client-feedback-rbtn")
+					label(for="client-feedback-rbtn")
+						|Выберите клиента
+					input.find-client(type="text")
+					//- ul.autocomplete-result-list
+				.input-group
+					input(type="radio" id='uamf-feedback-rbtn' name="client-feedback-rbtn")
+					label(for="uamf-feedback-rbtn")
+						|УАМФ
+				button.confirm-bnt
+					|OK
+		#choice-client-popup.vacancy-modal-popup
+			form
+				.input-group
+					p
+						|Выберите клиента
+					input(type="text")
+					//- ul.autocomplete-result-list
+				button.confirm-bnt
+					|OK
 		include vacancy-popup/_vacancy-popup
