--- a/app/pug/layouts/work-popup/_manufactury-type.pug
+++ b/app/pug/layouts/work-popup/_manufactury-type.pug
@@ -8,7 +8,7 @@
 			|добавить тип производства
 	.modal-row__layer
 		.modal-row__manufactury-type-row
-			.input-group.modal-row__manufactury-type-select.native-select 
+			.input-group.modal-row__manufactury-type-select.native-select
 				select.info-area(name="")
 					option(value="" disabled selected)
 						|Выбрать
@@ -17,9 +17,10 @@
 					option(value="")
 						|Цветы
 			.input-group
+				span.delete-manufactury-type
 				input.info-area(type="text" name="")
 		.modal-row__manufactury-type-row
-			.input-group.modal-row__manufactury-type-select.native-select 
+			.input-group.modal-row__manufactury-type-select.native-select
 				select.info-area(name="")
 					option(value="" disabled selected)
 						|Выбрать
@@ -28,5 +29,6 @@
 					option(value="")
 						|Цветы
 			.input-group
+				span.delete-manufactury-type
 				input.info-area(type="text" name="")
 		//- select.info-area(name="")
