--- a/app/pug/layouts/vacancy/row.pug
+++ b/app/pug/layouts/vacancy/row.pug
@@ -39,7 +39,7 @@
 				.table-full__placeholder.first
 				.table-full__placeholder.second
 				.table-full__placeholder.third
-			.table-full__row.f-container(data-status="CV отправлено" data-count="2" data-table="choosen")
+			.table-full__row.f-container(data-count="2")
 					.table-full__cell.row__cell.cell-names
 						p
 							|Гурківський Олександр
@@ -90,7 +90,7 @@
 						p
 							|Цветы
 					.table-full__cell.row__cell.cell-notes
-			.table-full__row.f-container(data-status="CV отправлено" data-count="2" data-table="choosen")
+			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
 					p
 						|Лемешко Аліна
@@ -132,7 +132,7 @@
 					p
 						|Поля
 				.table-full__cell.row__cell.cell-notes
-			.table-full__row.f-container(data-status="CV отправлено" data-count="2" data-table="choosen")
+			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
 					p
 						|Романов Валентин
@@ -173,7 +173,7 @@
 							|AC
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
-			.table-full__row.f-container(data-status="CV отправлено" data-count="2" data-table="choosen")
+			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
 					p
 						|Тарасюк Віталій
@@ -217,7 +217,7 @@
 					p
 						|Коровы
 				.table-full__cell.row__cell.cell-notes
-			.table-full__row.f-container(data-status="CV отправлено" data-count="2" data-table="choosen")
+			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
 					p
 						|Бичківська Алла
@@ -271,7 +271,7 @@
 				.table-full__placeholder.first
 				.table-full__placeholder.second
 				.table-full__placeholder.third
-			.table-full__row.f-container(data-status="Утвержден" data-count="1" data-table="ready")
+			.table-full__row.f-container(data-count="1")
 					.table-full__cell.row__cell.cell-names
 						p
 							|Червінський Йосип
@@ -308,7 +308,7 @@
 					.table-full__cell.row__cell.cell-notes
 						p
 							|Записан в посольство на 10.05
-			.table-full__row.f-container(data-status="Утвержден" data-count="1" data-table="ready")
+			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
 					p
 						|Шащук Іван
@@ -355,7 +355,7 @@
 				.table-full__placeholder.first
 				.table-full__placeholder.second
 				.table-full__placeholder.third
-			.table-full__row.f-container(data-status="Подан в визовый центр" data-count="1" data-table="wait")
+			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
 					p
 						|Іванчик Олександр
@@ -390,7 +390,7 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
-			.table-full__row.f-container(data-status="Подан в визовый центр" data-count="1" data-table="wait")
+			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
 					p
 						|Волтарніст Юлія
@@ -425,7 +425,7 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
-			.table-full__row.f-container(data-status="Подан в визовый центр" data-count="1" data-table="wait")
+			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
 					p
 						|Ситнік Оксана
@@ -467,7 +467,7 @@
 				.table-full__placeholder.first
 				.table-full__placeholder.second
 				.table-full__placeholder.third
-			.table-full__row.f-container(data-status="Забрал разрешение" data-count="2" data-table="department")
+			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
 					p
 						|Коргун Максим
@@ -509,7 +509,7 @@
 				.table-full__placeholder.first
 				.table-full__placeholder.second
 				.table-full__placeholder.third
-			.table-full__row.f-container(data-status="Трудоустроен" data-count="1" data-table="busy")
+			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
 					p
 						|Конончук Віталій
