--- a/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
@@ -20,7 +20,7 @@
 						.table-full__placeholder.first
 						.table-full__placeholder.second
 						.table-full__placeholder.third
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="2")
 							.table-full__cell.row__cell.cell-names
 								p
 									|Гурківський Олександр
@@ -28,7 +28,7 @@
 									|2
 							.table-full__cell.row__cell.cell-status
 								.cell-status__left
-									.cell-status__slider(data-date="")
+									.cell-status__slider
 										p.status.choosen
 											|Подготовка CV
 										p.status.choosen.active
@@ -65,13 +65,13 @@
 										|AC
 							.table-full__cell.row__cell.cell-exp
 							.table-full__cell.row__cell.cell-notes
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="2")
 						.table-full__cell.row__cell.cell-names
 							p
 								|Лемешко Аліна
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
-								.cell-status__slider(data-date="")
+								.cell-status__slider
 									p.status.choosen
 										|Подготовка CV
 									p.status.choosen.active
@@ -102,13 +102,13 @@
 									|AC
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="2")
 						.table-full__cell.row__cell.cell-names
 							p
 								|Романов Валентин
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
-								.cell-status__slider(data-date="")
+								.cell-status__slider
 									p.status.choosen
 										|Подготовка CV
 									p.status.choosen.active
@@ -143,13 +143,13 @@
 									|AC
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="2")
 						.table-full__cell.row__cell.cell-names
 							p
 								|Тарасюк Віталій
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
-								.cell-status__slider(data-date="")
+								.cell-status__slider
 									p.status.choosen
 										|Подготовка CV
 									p.status.choosen.active
@@ -182,13 +182,13 @@
 									|AC
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="2")
 						.table-full__cell.row__cell.cell-names
 							p
 								|Бичківська Алла
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
-								.cell-status__slider(data-date="")
+								.cell-status__slider
 									p.status.choosen
 										|Подготовка CV
 									p.status.choosen.active
@@ -234,13 +234,13 @@
 						.table-full__placeholder.first
 						.table-full__placeholder.second
 						.table-full__placeholder.third
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="1")
 							.table-full__cell.row__cell.cell-names
 								p
 									|Червінський Йосип
 							.table-full__cell.row__cell.cell-status
 								.cell-status__left
-									.cell-status__slider(data-date="")
+									.cell-status__slider
 										p.status.choosen
 											|Подготовка CV
 										p.status.choosen
@@ -272,13 +272,13 @@
 							.table-full__cell.row__cell.cell-notes
 								p
 									|Записан в посольство на 10.05 Записан в посольство на 10.05
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="1")
 						.table-full__cell.row__cell.cell-names
 							p
 								|Шащук Іван
 						.table-full__cell.row__cell.cell-status
 								.cell-status__left
-									.cell-status__slider(data-date="")
+									.cell-status__slider
 										p.status.choosen
 											|Подготовка CV
 										p.status.choosen
@@ -318,13 +318,13 @@
 						.table-full__placeholder.first
 						.table-full__placeholder.second
 						.table-full__placeholder.third
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="1")
 						.table-full__cell.row__cell.cell-names
 							p
 								|Іванчик Олександр
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
-								.cell-status__slider(data-date="")
+								.cell-status__slider
 									p.status.choosen
 										|Подготовка CV
 									p.status.choosen
@@ -353,13 +353,13 @@
 							.cell-status__right
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="1")
 						.table-full__cell.row__cell.cell-names
 							p
 								|Волтарніст Юлія
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
-								.cell-status__slider(data-date="")
+								.cell-status__slider
 									p.status.choosen
 										|Подготовка CV
 									p.status.choosen
@@ -388,13 +388,13 @@
 							.cell-status__right
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="1")
 						.table-full__cell.row__cell.cell-names
 							p
 								|Ситнік Оксана
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
-								.cell-status__slider(data-date="")
+								.cell-status__slider
 									p.status.choosen
 										|Подготовка CV
 									p.status.choosen
@@ -430,13 +430,13 @@
 						.table-full__placeholder.first
 						.table-full__placeholder.second
 						.table-full__placeholder.third
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="2")
 						.table-full__cell.row__cell.cell-names
 							p
 								|Коргун Максим
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
-								.cell-status__slider(data-date="")
+								.cell-status__slider
 									p.status.choosen
 										|Подготовка CV
 									p.status.choosen
@@ -472,13 +472,13 @@
 						.table-full__placeholder.first
 						.table-full__placeholder.second
 						.table-full__placeholder.third
-					.table-full__row.f-container
+					.table-full__row.f-container(data-count="1")
 						.table-full__cell.row__cell.cell-names
 							p
 								|Конончук Віталій
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
-								.cell-status__slider(data-date="")
+								.cell-status__slider
 									p.status.choosen
 										|Подготовка CV
 									p.status.choosen
