--- a/app/pug/layouts/work-popup/_feedback.pug
+++ b/app/pug/layouts/work-popup/_feedback.pug
@@ -1,7 +1,7 @@
 .row.feedback.modal-row
 	button.show-more
 		span
-			|показать еще
+			|показать все
 	.modal-row__controls
 		p
 			|Отзывы - 
@@ -54,7 +54,7 @@
 			.modal-row__feedback-date
 				time
 					|22.08.2019
-				button.modal-row__feedback-edit
+				button.modal-row__feedback-edit.edit-btn
 					|Редактировать
 			.modal-row__feedback-text
 				p
@@ -72,7 +72,7 @@
 			.modal-row__feedback-date
 				time
 					|15.07.2019
-				button.modal-row__feedback-edit
+				button.modal-row__feedback-edit.edit-btn
 					|Редактировать
 			.modal-row__feedback-text
 				p
@@ -90,7 +90,7 @@
 			.modal-row__feedback-date
 				time
 					|09.10.2018
-				button.modal-row__feedback-edit
+				button.modal-row__feedback-edit.edit-btn
 					|Редактировать
 			.modal-row__feedback-text
 				p
@@ -108,7 +108,7 @@
 			.modal-row__feedback-date
 				time
 					|03.04.2018
-				button.modal-row__feedback-edit
+				button.modal-row__feedback-edit.edit-btn
 					|Редактировать
 			.modal-row__feedback-text
 				p
@@ -126,7 +126,7 @@
 			.modal-row__feedback-date
 				time
 					|03.04.2018
-				button.modal-row__feedback-edit
+				button.modal-row__feedback-edit.edit-btn
 					|Редактировать
 			.modal-row__feedback-text
 				p
@@ -144,7 +144,7 @@
 				.modal-row__feedback-date
 					time
 						|03.04.2018
-					button.modal-row__feedback-edit
+					button.modal-row__feedback-edit.edit-btn
 						|Редактировать
 				.modal-row__feedback-text
 					p
